--- a/app/public/theme-settings.json
+++ b/app/public/theme-settings.json
@@ -67,7 +67,8 @@
       "tutorial-background": "var(--color-fill)"
     },
     "typography": {
-      "html-font": ""
+      "html-font": "-apple-system, BlinkMacSystemFont, \"Segoe UI\", Helvetica, Arial, sans-serif, \"Apple Color Emoji\", \"Segoe UI Emoji\"",
+      "html-font-mono": "ui-monospace, SFMono-Regular, \"SF Mono\", Menlo, Consolas, \"Liberation Mono\", monospace"
     }
   },
   "features": {
