--- a/app/public/theme-settings.json
+++ b/app/public/theme-settings.json
@@ -53,22 +53,22 @@
       "nav-keyline": "var(--color-grid)",
       "nav-sticking-expanded-keyline": "var(--color-nav-keyline)",
       "navigator-item-hover": "var(--color-fill-blue)",
-      "solarized-base03": "#002b36",
-      "solarized-base02": "#073642",
-      "solarized-base01": "#586e75",
-      "solarized-base00": "#657b83",
-      "solarized-base0": "#839496",
-      "solarized-base1": "#93a1a1",
-      "solarized-base2": "#eee8d5",
-      "solarized-base3": "#fdf6e3",
-      "solarized-yellow": "#b58900",
-      "solarized-orange": "#cb4b16",
-      "solarized-red": "#dc322f",
-      "solarized-magenta": "#d33682",
-      "solarized-violet": "#6c71c4",
-      "solarized-blue": "#268bd2",
-      "solarized-cyan": "#2aa198",
-      "solarized-green": "#859900",
+      "solarized-base03": "rgb(0, 43, 54)",
+      "solarized-base02": "rgb(7, 54, 66)",
+      "solarized-base01": "rgb(88, 110, 117)",
+      "solarized-base00": "rgb(101, 123, 131)",
+      "solarized-base0": "rgb(131, 148, 150)",
+      "solarized-base1": "rgb(147, 161, 161)",
+      "solarized-base2": "rgb(238, 232, 213)",
+      "solarized-base3": "rgb(253, 246, 227)",
+      "solarized-yellow": "rgb(181, 137, 0)",
+      "solarized-orange": "rgb(203, 75, 22)",
+      "solarized-red": "rgb(220, 50, 47)",
+      "solarized-magenta": "rgb(211, 54, 130)",
+      "solarized-violet": "rgb(108, 113, 196)",
+      "solarized-blue": "rgb(38, 139, 210)",
+      "solarized-cyan": "rgb(42, 161, 152)",
+      "solarized-green": "rgb(133, 153, 0)",
       "syntax-characters": "var(--color-solarized-cyan)",
       "syntax-comments": "var(--color-solarized-base01)",
       "syntax-keywords": "var(--color-solarized-green)",
