--- a/app/public/theme-settings.json
+++ b/app/public/theme-settings.json
@@ -81,7 +81,8 @@
     "typography": {
       "html-font": "-apple-system, BlinkMacSystemFont, \"Segoe UI\", Helvetica, Arial, sans-serif, \"Apple Color Emoji\", \"Segoe UI Emoji\"",
       "html-font-mono": "ui-monospace, SFMono-Regular, \"SF Mono\", Menlo, Consolas, \"Liberation Mono\", monospace"
-    }
+    },
+    "icons": {}
   },
   "features": {
     "docs": {}
