--- a/app/public/theme-settings.json
+++ b/app/public/theme-settings.json
@@ -82,7 +82,9 @@
       "html-font": "-apple-system, BlinkMacSystemFont, \"Segoe UI\", Helvetica, Arial, sans-serif, \"Apple Color Emoji\", \"Segoe UI Emoji\"",
       "html-font-mono": "ui-monospace, SFMono-Regular, \"SF Mono\", Menlo, Consolas, \"Liberation Mono\", monospace"
     },
-    "icons": {}
+    "icons": {
+      "article": "/images/article.svg"
+    }
   },
   "features": {
     "docs": {}
